Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.0.0
Description
Opening an empty foo.qdoc or foo.moc is enough to reproduce.
Attachments
Issue Links
- replaces
-
QTCREATORBUG-16101 Warnings flood from clang backend when editing qdoc files
-
- Closed
-
-
QTCREATORBUG-16124 Clang: libclang crashes when opening *.moc from created unit test
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-16140 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
156575,4 | Clang: Avoid parse loop if libclang crashed or file vanished | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
156726,3 | Clang: Classify *.{moc,qdoc} as CXXSource | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |