Clang: Classify *.{moc,qdoc} as CXXSource

This leads to the "-x c++" arguments to libclang for these file types
and thus avoids crashes of libclang 3.6.

Task-number: QTCREATORBUG-16140
Change-Id: I6141615a1b0b7ad92d7151ad58c304eaf99fb4f3
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Christian Kandeler <christian.kandeler@theqtcompany.com>